--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -18,7 +18,8 @@ isbn="978-3-030-44584-3"
 	author	={tecom-cn},
 	title	={JiangxiTecom Biochemistry Equipment Co., Ltd., Hematology Analyzers Biochemistry Analyzers Reagents},
 	year	={2022},
-	url	={https://en.tecom-cn.com/}
+	url	={https://en.tecom-cn.com/},
+	journal	={\\URL: https://en.tecom-cn.com/}
 	}
 
 @article{DBLP:journals/corr/abs-1802-10548,
@@ -53,14 +54,16 @@ isbn="978-3-030-44584-3"
 author = {GeeksForGeeks},
 title	 = {Supervised and Unsupervised learning - GeeksforGeeks},
 year	 = {2022},
-url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
+url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/},
+journal	= {\\URL: https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
 }
 
 @article{Annie_Stuart_What_2022_webmd,
 	author	={Annie Stuart What},
 	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
 	year	={2022},
-	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia},
+	journal	={\\URL: https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
 }
 
 @article{badrinarayanan2017segnet,
@@ -74,11 +77,12 @@ url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
   publisher={IEEE}
 }
 
-@ONLINE {BCCD_Dataset,
+@article{BCCD_Dataset,
     author = "Shenggan",
     title  = "BCCD Dataset",
     year   = "2017",
-    url    = "https://github.com/Shenggan/BCCD_Dataset"
+    url    = "https://github.com/Shenggan/BCCD_Dataset",
+    journal = "\\URL: https://github.com/Shenggan/BCCD\_Dataset"
 }
 
 @article{bhavnani2016segmentation,
@@ -104,14 +108,16 @@ url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
 author = {mayoclinic},
 title	 = {Complete blood count (CBC) - Mayo Clinic},
 year	 = {2022},
-url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
+url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919},
+journal	= {\\URL: https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20\\384919}
 }
 
 @article{2022_cellavision,
 	author	={cellavision},
 	title	={CellaVision News Blast – CellaVision AB},
 	year	={2022},
-	url	={https://blog.cellavision.com/}
+	url	={https://blog.cellavision.com/},
+  journal ={\\URL: https://blog.cellavision.com/}
 	}
 @inproceedings{chen2016dcan,
   title={DCAN: deep contour-aware networks for accurate gland segmentation},
@@ -125,21 +131,24 @@ url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about
 author 	= {Wikipedia},
 title 	= {Circle Hough Transform - Wikipedia},
 year 		= {2022},
-url			= {https://en.wikipedia.org/wiki/Circle_Hough_Transform}
+url			= {https://en.wikipedia.org/wiki/Circle_Hough_Transform},
+journal	= {\\URL: https://en.wikipedia.org/wiki/Circle\_Hough\_Transform}
 }
 
 @article{CNN-IBM,
 	author	={IBM},
 	title	={What are Convolutional Neural Networks? | IBM},
 	year	={2020},
-	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
+	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks},
+	journal	={\\URL: https://www.ibm.com/cloud/learn/convolutional-neural-networks}
 	}
 
 @article{DG-ml-cheatsheet,
 author = {ml-cheatsheet},
 title	 = {Gradient Descent — ML Glossary documentation},
 year	 = {2022},
-url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html}
+url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html},
+journal = {\\URL: https://ml-cheatsheet.readthedocs.io/en/latest/gradient\_descent.html}
 }
 
 @article{digabel1978iterative,
@@ -266,7 +275,8 @@ url={https://doi.org/10.1038/s41598-021-04426-x}
 author = {LR-GeeksForGeeks},
 title	 = {ML | Linear Regression - GeeksforGeeks},
 year	 = {2022},
-url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
+url		 = {https://www.geeksforgeeks.org/ml-linear-regression/},
+journal = {\\URL: https://www.geeksforgeeks.org/ml-linear-regression/}
 }
 
 @inproceedings{maple2003geometric,
@@ -281,7 +291,7 @@ url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
 @article{mccarthy2004artificial,
   title={What is artificial intelligence},
   author={McCarthy, John},
-  journal={URL: http://www-formal. stanford. edu/jmc/whatisai. html},
+  journal={\\URL: http://www-formal.stanford.edu/jmc/whatisai.html},
   year={2004}
 }
 
@@ -297,7 +307,8 @@ url		 = {https://www.geeksforgeeks.org/ml-linear-regression/}
 	author = {IBM},
 	title	 = {What is Machine Learning? | IBM},
 	year	 = {2022},
-	url	   = {https://www.ibm.com/cloud/learn/machine-learning}
+	url	   = {https://www.ibm.com/cloud/learn/machine-learning},
+	journal	= {\\URL: https://www.ibm.com/cloud/learn/machine-learning}
 }
 
 @article{murphy1996finley,
@@ -351,7 +362,8 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
 	author	={A Rectified Linear},
 	title	={U-Net Explained | Papers With Code},
 	year	={2022},
-	url	={https://paperswithcode.com/method/u-net}
+	url	={https://paperswithcode.com/method/u-net},
+	journal	={\\URL: https://paperswithcode.com/method/u-net}
 }
 
 @article{patil2014blood,
@@ -373,9 +385,10 @@ number 	= {6},
 year 		= {2007}
 }
 
-@data{pm77-2n23-20,
+@article{pm77-2n23-20,
 	doi = {10.21227/pm77-2n23},
 	url = {https://dx.doi.org/10.21227/pm77-2n23},
+	journal = {\\URL: https://dx.doi.org/10.21227/pm77-2n23},
 	author = {Scotti, Fabio and Labati, Ruggero Donida and Piuri, Prof. Vincenzo },
 	publisher = {IEEE Dataport},
 	title = {ALL-IDB (Acute Lymphoblastic leukaemia-International Database)},
@@ -386,7 +399,8 @@ year 		= {2007}
 author = {URMC rochester},
 title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
 year	 = {2022},
-url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
+url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160},
+journal	= {\\URL: https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34\&Con\\tentTypeID=160}
 }
 
 @inproceedings{ronneberger2015u,
@@ -442,14 +456,16 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
 author = {askanydifference},
 title	 = {Difference Between Semi-Supervised and Reinforcement Learning (With Table)  – Ask Any Difference},
 year   = {2022},
-url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/}
+url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-reinforcement-learning/},
+journal = {\\URL: https://askanydifference.com/difference-between-semi-supervised-and-reinforcem\\ent-learning/}
 }
 
 @article{Steve_Eddins_2022_mathworks,
 	author	={Steve Eddins},
 	title	={The Watershed Transform: Strategies for Image Segmentation - MATLAB \& Simulink},
 	year	={2022},
-	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html}
+	url	={https://es.mathworks.com/company/newsletters/articles/the-watershed-transform-strategies-for-image-segmentation.html},
+	journal	={\\URL: https://es.mathworks.com/company/newsletters/articles/the-watershed-transform\\-strategies-for-image-segmentation.html}
 	}
 
 @article{tran2019blood,
@@ -463,21 +479,24 @@ url 	 = {https://askanydifference.com/difference-between-semi-supervised-and-rei
 author = {Gaudenz Boesch},
 title  = {VGG Very Deep Convolutional Networks (VGGNet) - What you need to know - viso.ai},
 year   = {2022},
-url    = {https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/}
+url    = {https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/},
+journal = {\\URL: https://viso.ai/deep-learning/vgg-very-deep-convolutional-networks/}
 }
 
 @article{Vincent_And_Soille_2022_sciencedirect,
 	author	={Vincent And Soille},
 	title	={Watershed Segmentation - an overview | ScienceDirect Topics},
 	year	={2022},
-	url	={https://www.sciencedirect.com/topics/computer-science/watershed-segmentation}
+	url	={https://www.sciencedirect.com/topics/computer-science/watershed-segmentation},
+	journal	={\\URL: https://www.sciencedirect.com/topics/computer-science/watershed-segmentation}
 }
 
 @article{WBC-clevelandclinic,
 author = {clevelandclinic},
 title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
 year	 = {2022},
-url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
+url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells},
+journal	= {\\URL: https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 }
 
 @article{Zheng2018,
@@ -494,18 +513,13 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 
 
 @article{hoshman2002,
-  doi = {10.48550/ARXIV.COND-MAT/0204492},
-  
-  url = {https://arxiv.org/abs/cond-mat/0204492},
-  
-  author = {Malarz, K. and Kaczanowska, S. and Kulakowski, K.},
-  
-  keywords = {Condensed Matter (cond-mat), Chaotic Dynamics (nlin.CD), FOS: Physical sciences, FOS: Physical sciences},
-  
   title = {Chaotic Dynamics of Forest Fires},
-  
+  doi = {10.48550/ARXIV.COND-MAT/0204492},
+  url = {https://arxiv.org/abs/cond-mat/0204492},
+  journal = {\\URL: https://arxiv.org/abs/cond-mat/0204492},
+  author = {Malarz, K. and Kaczanowska, S. and Kulakowski, K.},
+  keywords = {Condensed Matter (cond-mat), Chaotic Dynamics (nlin.CD), FOS: Physical sciences, FOS: Physical sciences},
   publisher = {arXiv},
-  
   year = {2002},
   
   copyright = {Assumed arXiv.org perpetual, non-exclusive license to distribute this article for submissions made before January 2004}
