--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -76,7 +76,7 @@
 \renewcommand\bibname{References}
 
 % Bibliography styling
-\bibliographystyle{acm}
+\bibliographystyle{plain}
 
 % Redifining from 1.1 to 1.a ... 1.b ... and so on
 %\renewcommand{\thesubsection}{\alph{subsection}}
@@ -259,8 +259,6 @@
 \newpage
 
 \input{chap2.tex}
-
-segmentation is done using Pulse-Coupled Neural Network (PCNN) and square tracing algorithm for contour tracing after de-noising it with PCNN combined with median filter, the counting is performed by scanning the image and using edge detection methods as square tracing algorithm. this method gave good results compared to state of art methods.\\
 
 \newpage
 
