--- a/PFE/latex/introduction.tex
+++ b/PFE/latex/introduction.tex
@@ -20,7 +20,7 @@ Blood carries out many vital functions as it circulates through the body. It tra
 
 Earlier hematologists were performing microscopic, examination and counting of blood cells manually, which was very time-consuming and tedious process. Also, the accuracy of counting mainly depends on their expertise skill and their physical conditions. Also, because of cells complex nature, it still remains a challenging task to segment cells from its background and count them automatically.
 
-Our work is to automate the task of cell counting, we will try to find the best solution to count red, white blood cells and platelets. Therefore, we procede in two steps:
+Our work is to automate the task of cell counting, we will try to find the best solution for counting red, white blood cells and platelets. Therefore, we procede in two steps:
 \begin{itemize}
     \item \textbf{The segmentation:} where we need to segment the image and remove the noise to get a clear mask on which we are going preform the counting. In this phase we used two convolutional neural networks: U-Net and SegNet.
     \item \textbf{The counting:} in which we will take the output mask from the first phase and apply counting algorithms on it. We used 3 algorithms to count the cells: Watershed, Connected Component Labeling, Circle Hough transform.\
